--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <version>3.0.0-M7</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>createnewleadtestng.xml</suiteXmlFile>
+            <suiteXmlFile>vtigerpjttestng.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
